# findfast

./: CHANGELOG.md  LICENSE  README.md  findfast.cabal  hie.yaml  report.html
app/: Main.hs
bench/: Main.hs
docker/: Dockerfile  README.md  build.bat  run.bat
lib/: FindFast.hs
lib/FindFast/: ByteString.hs  Glob.hs  ProcessPath.hs  RegEx.hs  Search.hs  Utils.hs
src/: main.hs
src/FindFast/: Path.hs  Search.hs  Utils.hs
test/: GlobSpec.hs  ProcessPathSpec.hs  Spec.hs
test/data/: test.txt
test/data/test-folder-01/: 01_lorem_40000_words.txt
test/data/test-folder-01/test-folder-02/: 02_lorem_40000_words.txt
test/data/test-folder-01/test-folder-02/test-folder-03/: 03_lorem_40000_words.txt
