cabal-version:      3.0

name:               findfast
version:            1.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
extra-doc-files:    CHANGELOG.md
author:             mgrosser3

build-type:         Simple

common warnings
    ghc-options: -Wall

executable ff 
    import: warnings
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
    build-depends:
      base ^>=4.18.3.0,
      time ^>=1.14,
      fflib
    default-language: Haskell2010

library fflib 
    hs-source-dirs: lib
    exposed-modules:
      FindFast,
      FindFast.RegEx,
      FindFast.ProcessPath,
      FindFast.Glob,
      FindFast.Utils
    build-depends:
      base ^>=4.18.3.0,
      directory ^>=1.3.9.0,
      filepath ^>=1.5.4.0,
      bytestring ^>=0.12.2.0,
      regex-tdfa ^>=1.3.2.5,
      Glob ^>=0.10.2,
      async ^>=2.2.5
    default-language: Haskell2010

benchmark ffbench
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: bench
    build-depends:
      base ^>=4.18.3.0,
      criterion ^>=1.6.4.1,
      fflib
    default-language: Haskell2010

test-suite fftest
  type: exitcode-stdio-1.0
  main-is:Spec.hs
  hs-source-dirs: test
  build-depends:
    base ^>=4.18.3.0,
    hspec ^>=2.11.14,
    silently ^>= 1.2.5.4,
    directory ^>=1.3.9.0,
    filepath ^>=1.5.4.0,
    fflib,
